--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 			<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 				<ul class="site-navigation nav navbar-nav">
 					<li>
-						<a href="index.html">Accueil</a>
+						<a class="lien-accueil" href="index.html">Accueil</a>
 					</li>
 					<li>
 					</li>
 					<li>
-						<a href="page2.html">page2 &gt;</a>
+						<a class="lien-page2" href="page2.html">page2 &gt;</a>
 					</li>
 				</ul>
 			</div>
@@ -225,9 +225,9 @@
 	<div class="container bloc-sm">
 		<div class="row">
 			<div class="col-sm-12">
-				<p class="text-center white">
+				<h2 class="text-center white">
 					La chouette agence - Agence web basée à Lyon.<br>
-				</p>
+				</h2>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
 						<div class="text-center">
