--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<script src="./js/jquery.touchSwipe.js" defer></script>
 	<script src="./js/gmaps.js"></script>
 
-	<title>La chouette Agence - Entreprise de webdesign baséé sur Lyon</title>
+	<title>La chouette Agence - Entreprise de webdesign basée sur Lyon</title>
 
 
 	<!-- Analytics -->
@@ -40,7 +40,7 @@
 
 				<nav class="navbar row">
 					<div class="navbar-header">
-						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.png"
+						<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.jpg"
 								alt="logo et typographie de la chouette agence" height="40" width="215" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
@@ -212,9 +212,9 @@
 				</div>
 				<div class="row tight-width-whitespace portfolio-row">
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/3.png" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-								src="img/3.png" class="img-responsive portfolio-thumb"
+								src="img/3.pjg" class="img-responsive portfolio-thumb"
 								alt="image de création d'un site web pour voyageur" width="270" height="270" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
@@ -225,9 +225,9 @@
 						</p>
 					</div>
 					<div class="col-sm-6">
-						<a href="#" data-lightbox="img/4.png" data-gallery-id="gallery-1"
+						<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
-								src="img/4.png" class="img-responsive portfolio-thumb"
+								src="img/4.jpg" class="img-responsive portfolio-thumb"
 								alt="image de création d'un site web pour agence de mariage" width="270"
 								height="270" /></a>
 						<h3 class="mg-md text-center">
@@ -296,7 +296,7 @@
 						<div class="row">
 							<div class="col-sm-4">
 								Partenaires
-								<ul>
+								<ul class="lien-ext">
 									<li><a href="voiture.com">voiture.com</a></li>
 									<li><a href="pizza.com">pizza.com</a></li>
 									<li><a href="matoiture.com">matoiture.com</a></li>
