--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
-								src="img/3.pjg" class="img-responsive portfolio-thumb"
+								src="img/3.jpg" class="img-responsive portfolio-thumb"
 								alt="image de création d'un site web pour voyageur" width="270" height="270" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
