--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 					<div class="col-sm-6">
 						<a href="#" data-lightbox="img/1.jpg" data-gallery-id="gallery-1"
 							data-caption="Refonte d'un site web pour un journal local" data-frame="snapshot-lb"><img
-								src="img/1.jpg" alt="image de refonte d'une site web pour un journal local"
+								src="img/1.jpg" alt="journaux empilés"
 								class="img-responsive portfolio-thumb" width="270" height="270" /></a>
 						<h3 class="mg-md text-center">
 							Refonte d'un site web pour un journal local
@@ -201,7 +201,7 @@
 						<a href="#" data-lightbox="img/2.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site web pour photographes" data-frame="snapshot-lb"><img
 								src="img/2.jpg" class="img-responsive portfolio-thumb"
-								alt="image de création d'un site web pour photographes" width="270" height="270" /></a>
+								alt="photographe professionnelle" width="270" height="270" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site web pour photographes
 						</h3>
@@ -215,7 +215,7 @@
 						<a href="#" data-lightbox="img/3.jpg" data-gallery-id="gallery-1"
 							data-caption="Création d'un site internet pour un voyageur" data-frame="snapshot-lb"><img
 								src="img/3.jpg" class="img-responsive portfolio-thumb"
-								alt="image de création d'un site web pour voyageur" width="270" height="270" /></a>
+								alt="Materiel de vidéo professionnel" width="270" height="270" /></a>
 						<h3 class="mg-md text-center">
 							Création d'un site internet pour un voyageur
 						</h3>
@@ -228,7 +228,7 @@
 						<a href="#" data-lightbox="img/4.jpg" data-gallery-id="gallery-1"
 							data-caption="Conception d'un site pour une agence de mariage" data-frame="snapshot-lb"><img
 								src="img/4.jpg" class="img-responsive portfolio-thumb"
-								alt="image de création d'un site web pour agence de mariage" width="270"
+								alt="bureau agence de mariages" width="270"
 								height="270" /></a>
 						<h3 class="mg-md text-center">
 							Conception d'un site pour une agence de mariage
